--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "raave-core",
   "version": "1.0.0",
   "description": "rAAVE Core smart contracts",
-  "main": "truffle-config.js",
-  "directories": {
-    "test": "test"
-  },
+  "files": [
+    "/contracts/**/*.sol",
+    "/build/contracts/*.json"
+  ],
   "dependencies": {},
   "devDependencies": {
-    "@openzeppelin/contracts": "3.2.0",
+    "@openzeppelin/contracts": "3.3.0",
     "@truffle/hdwallet-provider": "^1.2.1",
     "@uniswap/lib": "^4.0.1-alpha",
     "@uniswap/v2-periphery": "^1.1.0-beta.0",
