--- a/.github/workflows/truffle.yml
+++ b/.github/workflows/truffle.yml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       matrix:
         node-version: [10.x]
-        os: [ubuntu-latest]
+        os: [ubuntu-20.04]
     steps:
     - uses: actions/checkout@v2
     - uses: actions/setup-node@v1
